--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>This weeks recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/caprese-flatbread.html">Caprese Flatbread</a>
+    <h1>This Weeks Recipes</h1>
+    
+    <p><a href="recipes/caprese-flatbread.html">Caprese Flatbread</a></p>
+    <p><a href="recipes/baked-lemon-pasta.html">Baked Lemon Pasta</a></p>
+    <p><a href="recipes/white-bean-gnocchi.html">White Bean & Sun-dried Tomato Gnocchi</a></p>
 </body>
 </html>
