--- a/recipes/white-bean-gnocchi.html
+++ b/recipes/white-bean-gnocchi.html
@@ -6,7 +6,7 @@
     <title>White Bean & Sun-dried Tomato Gnocchi</title>
 </head>
 <body>
-    <h1>White Bean & Sun-dried Tomato Gnocchi</h1>
+    <h1>White Bean & Sun-dried Tomato Gnocchi(not actually making this)</h1>
     <img src="https://www.eatingwell.com/thmb/oJ63OiuGRUA0vAQ8c3cdTbKth_0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/JF_WhiteBeanSun-DriedTomatoGnocci_64343-ee2bf01d7169452298d62092de80cf3c.jpg" alt="White Bean Gnocchi">
     <h2>Description</h2>
     <p>Sun-dried tomatoes are the star of this recipe—providing texture and umami. Combined with the spinach, they make this dish a great source of vitamins C and K.</p>
