--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>This weeks recipes</title>
 </head>
 <body>
     <h1>This Weeks Recipes</h1>
     
-    <p><a href="recipes/caprese-flatbread.html">Caprese Flatbread</a></p>
-    <p><a href="recipes/baked-lemon-pasta.html">Baked Lemon Pasta</a></p>
-    <p><a href="recipes/white-bean-gnocchi.html">White Bean & Sun-dried Tomato Gnocchi</a></p>
+    <p class="make"><a href="recipes/caprese-flatbread.html">Caprese Flatbread</a></p>
+    <p class="make"><a href="recipes/baked-lemon-pasta.html">Baked Lemon Pasta</a></p>
+    <p class="fake"><a href="recipes/white-bean-gnocchi.html">White Bean & Sun-dried Tomato Gnocchi</a></p>
 </body>
 </html>
